Bug 525052 - crash running filter [@ nsMsgFilterService::ApplyFilters(int, nsIArray*, nsIMsgFolder*, nsIMsgWindow*)]. r/sr/a=bienvenu