mailnews/base/search/src/nsMsgFilterService.cpp
@@ -1008,6 +1008,7 @@ NS_IMETHODIMP nsMsgFilterService::ApplyFilters(nsMsgFilterTypeType aFilterType,
                                                nsIMsgFolder *aFolder,
                                                nsIMsgWindow *aMsgWindow)
 {
+  NS_ENSURE_ARG_POINTER(aFolder);
   nsCOMPtr<nsIMsgFilterList>    filterList;
   nsresult rv = aFolder->GetFilterList(aMsgWindow, getter_AddRefs(filterList));
   NS_ENSURE_SUCCESS(rv, rv);
